# trailer-docking

./: README.md
hybrid_a_star_planner/: package.xml  setup.cfg  setup.py
hybrid_a_star_planner/hybrid_a_star_planner/: a_star.py  forward_mpc.py  forward_trailerbot_mpc_node.py  hybrid_a_star.py  hybrid_a_star_node.py  mpc.py  reverse_mpc.py  reverse_trailerbot_mpc_node.py  test_mpc.py  trailerbot_mpc_node.py  turtlebot_mpc_node.py  utils.py
trailerbot_description/: CMakeLists.txt  package.xml
trailerbot_description/config/: config.rviz
trailerbot_description/launch/: display.launch.py  gazebo.launch copy 2.py  gazebo.launch copy.py  gazebo.launch.py
trailerbot_description/urdf/: trailerbot.urdf
trailerbot_description/worlds/: empty_world.world
